# fact-library

./: .env.example  .gitignore  CLAUDE-PART2.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/scorers/: dental_practice.yml  law_firm.yml
crawler/: base.py  httpx_crawler.py  page_scorer.py  playwright_crawler.py  robots.py
docs/: architecture.md  design-decisions.md  page_scoring_spec.md
docs/adr/: 001-qdrant-over-pgvector.md  002-portkey-for-llm-routing.md  003-fact-typed-chunks.md  004-prefect-over-dagster.md  005-knowledge-base-ingestion.md  006-hybrid-document-chunking.md  007-ci-gated-retrieval-eval.md
embedder/: base.py  local_embedder.py  openai_embedder.py
extractor/: fact_extractor.py  llm_client.py  schemas.py
extractor/prompts/: extraction_system.txt  extraction_user.jinja
ingestion/: document_ingestion.py  kb_ingestion.py
notebooks/: demo.ipynb
pipeline/: flows.py  incremental.py  tasks.py
quality/eval/: eval_questions.json  metrics.py  run_eval.py
seeds/: mock_site_server.py  seed_knowledge_base.py
seeds/mock_sites/: dental_practice.html  home_services.html  law_firm.html
seeds/sample_documents/: dental_service_menu.txt  home_services_areas.txt  law_firm_faq.txt
serving/: main.py
serving/routers/: crawl.py  facts.py  status.py
store/: collection_config.py  qdrant_store.py
supabase/: client_knowledge_base.sql
tests/: conftest.py  test_document_ingestion.py  test_embedder.py  test_eval_metrics.py  test_extractor.py  test_kb_ingestion.py  test_pipeline.py  test_scorer.py  test_serving.py  test_store.py
