[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "client-fact-library"
version = "0.1.0"
description = "AI data pipeline that crawls client websites, extracts typed business facts via LLM, and stores them in Qdrant"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Crawler
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "lxml>=5.2",
    # LLM gateway
    "portkey-ai>=1.9",
    # Direct mode providers
    "google-generativeai>=0.7",
    "openai>=1.40",
    # Embeddings
    "sentence-transformers>=3.0",
    # Vector store
    "qdrant-client>=1.10",
    # Pipeline orchestration
    "prefect>=3.0",
    # Serving
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # Data validation
    "pydantic>=2.7",
    # Prompt templates
    "jinja2>=3.1",
    # Utilities
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["crawler*", "extractor*", "embedder*", "store*", "pipeline*", "serving*", "seeds*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = [
    "tests/*",
    "seeds/*",
    "notebooks/*",
    ".venv/*",
    "*/conftest.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
